--- a/src/pages/LoginPage/loginpage.css
+++ b/src/pages/LoginPage/loginpage.css
@@ -1,7 +1,8 @@
-img.bg {
+.wrapper {
+    background-image: url("./login_background.png");
     /* Set rules to fill background */
-    min-height: 100%;
-    min-width: 1024px;
+    min-height: 100vh;
+    min-width: 100vw;
         
     /* Set up proportionate scaling */
     width: 100%;
@@ -11,6 +12,39 @@ img.bg {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: -1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;  
+    
+}
+
+.jumbotron {
+	/* make the background grey and transparent */
+    background-color: transparent;
+   
+}
+
+#introduction-banner {
+	text-align: center;
+	color: white;
+	
+}
+
+#introduction-banner h1{
+	font-size: 3em;
+    font-weight: 900;		/*boldest */
+    margin-bottom: 1em;
+}
+
+#introduction-banner .my-btn{
+    background-image: url("./login_google.png"); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 17rem;
+    height: 4rem;
 }
 
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
